@@ -7,6 +7,7 @@ CHANGELOG
 
 2023/04/24:
 - TestEngine: Fixed IM_CHECK_STR_xxx() macros not honoring io.ConfigBreakOnError.
+- TestEngine: Added ImGuiTestOpFlags_NoFocusWindow support in WindowBringToFront(). (#24)
 
 2023/04/06;
 - TestEngine: Made simulated mouse-clicks activate platform-level focus when changing viewports.
